zone file download 기능 추가