@@ -6,10 +6,12 @@ import tasks.entity.DnsRecord;
 import tasks.entity.DnsRecord.DnsType;
 import tasks.repository.DnsRecordRepository;
 
-import javax.net.ssl.SSLSocket;
 import javax.net.ssl.SSLSocketFactory;
+import javax.net.ssl.SSLSocket;
+
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,11 +28,6 @@ public class DnsRecordService {
     }
 
     public DnsRecord save(DnsRecord dnsRecord) {
-        // maindomain 이 비어 있으면 자동 추출해서 채움
-        if ((dnsRecord.getMaindomain() == null || dnsRecord.getMaindomain().isBlank())
-                && dnsRecord.getHost() != null && !dnsRecord.getHost().isBlank()) {
-            dnsRecord.setMaindomain(extractDomain(dnsRecord.getHost()));
-        }
         return dnsRecordRepository.save(dnsRecord);
     }
 
@@ -38,50 +35,54 @@ public class DnsRecordService {
         dnsRecordRepository.deleteById(id);
     }
 
-    public List<DnsRecord> search(String keyword) {
-        return dnsRecordRepository.findByHostContainingIgnoreCaseOrIpContainingIgnoreCase(keyword, keyword);
-    }
-
     public List<DnsRecord> searchBy(String keyword, DnsType type, Boolean sslValid) {
-        return dnsRecordRepository.findAll().stream()
-                .filter(r -> keyword == null || r.getHost().toLowerCase().contains(keyword.toLowerCase()) || r.getIp().toLowerCase().contains(keyword.toLowerCase()))
+        List<DnsRecord> all = dnsRecordRepository.findAll();
+
+        return all.stream()
+                .filter(r -> keyword == null || r.getHost().toLowerCase().contains(keyword.toLowerCase()) || r.getIp().contains(keyword))
                 .filter(r -> type == null || r.getType() == type)
                 .filter(r -> sslValid == null || r.isSslValid() == sslValid)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public String generateZoneFile(String maindomain) {
+        List<DnsRecord> records = dnsRecordRepository.findByMaindomain(maindomain);
+
+        return records.stream()
+                .map(r -> String.format("%s\tIN\t%s\t%s",
+                        r.getHost(), r.getType(), r.getIp()))
+                .collect(Collectors.joining("\n"));
+    }
+
+    public List<DnsRecord> search(String keyword) {
+        return dnsRecordRepository.findAll().stream()
+                .filter(r -> keyword == null
+                        || r.getHost().toLowerCase().contains(keyword.toLowerCase())
+                        || r.getIp().contains(keyword))
+                .collect(Collectors.toList());
     }
 
     public void checkAndUpdateAllSsl() {
-        List<DnsRecord> records = findAll();
+        List<DnsRecord> records = dnsRecordRepository.findAll();
+
         for (DnsRecord record : records) {
-            String host = extractDomain(record.getHost());
-            boolean valid = isSslValid(host);
-            record.setSslValid(valid);
-            save(record);
+            try {
+                boolean valid = checkSslValidity(record.getHost());
+                record.setSslValid(valid);
+                dnsRecordRepository.save(record);
+            } catch (Exception e) {
+                record.setSslValid(false);
+                dnsRecordRepository.save(record);
+            }
         }
     }
 
-    private boolean isSslValid(String host) {
-        try {
-            SSLSocketFactory factory = (SSLSocketFactory) SSLSocketFactory.getDefault();
-            try (SSLSocket socket = (SSLSocket) factory.createSocket(host, 443)) {
-                socket.setSoTimeout(3000);
-                socket.startHandshake();
-                return true;
-            }
+    private boolean checkSslValidity(String host) {
+        try (var socket = SSLSocketFactory.getDefault().createSocket(host, 443)) {
+            ((SSLSocket) socket).startHandshake();
+            return true;
         } catch (Exception e) {
             return false;
         }
-    }
-
-    private String extractDomain(String host) {
-        if (host == null || !host.contains(".")) return "";
-        host = host.trim().toLowerCase();
-        if (host.startsWith("http://")) host = host.substring(7);
-        if (host.startsWith("https://")) host = host.substring(8);
-        int slashIndex = host.indexOf('/');
-        if (slashIndex > -1) host = host.substring(0, slashIndex);
-        String[] parts = host.split("\\.");
-        if (parts.length < 2) return host;
-        return parts[parts.length - 2] + "." + parts[parts.length - 1];
     }
 }
